--- a/public/style.css
+++ b/public/style.css
@@ -29,7 +29,18 @@ body {
   html {
     font-size: 20px;
   }
+  
 }
+@media (max-width: 400px) { 
+  html {
+    font-size: 20px;
+  } 
+  .chessathor { /* Can't be played on mobile */
+    display: none !important;
+  }
+}
+
+
 
 .icons-social i {
   font-size: 2em;
@@ -87,10 +98,9 @@ main > hr {
   height: 2.65rem;
 }
 
-/* art by Albulena Panduri */
 html {
   background: black;
-  background-image: url('../public/universe.jpg');
+  background-image: url('../public/universe.jpg'); /* art by Albulena Panduri */
   background-size: cover;
   background-position: center center;
 }
@@ -113,7 +123,7 @@ main {
   font-weight: 400;
   letter-spacing: 1px;
 
-  color: #fafafa;
+  color: #fafafa; /* https://www.youtube.com/watch?v=N6xoFhkthls */
   text-decoration: none;
   transition: all 0.2s;
 }
